# KV-Bridge

./: README.md  pyproject.toml
config/: settings.yaml
docs/: ECOSYSTEM.md
kv_bridge/cli/: main.py  server.py  shadow.py  stats.py
kv_bridge/common/: __init__.py  config.py  logging.py  tracing.py  utils.py
kv_bridge/core/: __init__.py  metrics.py  router.py
kv_bridge/core/adapters/: __init__.py  anthropic.py  base.py  openai.py  sglang.py  vllm.py
kv_bridge/core/economic/: __init__.py  profiler.py
kv_bridge/core/iceberg/: __init__.py  barrier.py  compiler.py
kv_bridge/core/shadow/: __init__.py  radix_tree.py  tracker.py
kv_bridge/core/vfd/: __init__.py  allocator.py  indexer.py
kv_bridge/gateway/: __init__.py  main.py  middleware.py
kv_bridge/schemas/: __init__.py  cache.py  exceptions.py  prompt.py  request.py
tests/: conftest.py  test_adapters.py  test_economic.py  test_iceberg.py  test_router.py  test_shadow.py  test_vfd.py
